# opencubes

cpp/: CMakeLists.txt  Readme.md  build.sh  cache.hpp  config.hpp.in  cubes.cpp  program.cpp  results.hpp  rotations.hpp  structs.hpp  testencode.cpp
cpp/include/: compressedCube.hpp  cube.hpp  cubeSwapSet.hpp  cubes.hpp  hashes.hpp  newCache.hpp
cpp/libraries/: mapped_file.cpp  mapped_file.hpp
cpp/src/: cache.cpp  cubeSwapSet.cpp  cubes.cpp  newCache.cpp
cpp/tests/src/: test_mapped.cpp
